--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -58,3 +58,41 @@ h1,h2,h3{
     font-size: 4rem;
     font-weight: normal;
 }
+
+nav{
+    font-size: 80%;
+    font-family: var(--mono);
+    padding: 1rem;
+}
+
+nav h1 a {
+    font-family : var(--sans);
+}
+
+nav ul h1 i{
+    justify-content: left;
+}
+
+
+nav ul{
+    list-style-type : none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+
+nav a{
+    color : var(--white);
+    text-decoration: none;
+    display : block;
+}
+
+nav a:hover{
+    color: var(--magenta);
+}
+
