--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,6 +34,66 @@ h1,h2,h3{
     margin: 0;
 }
 
+/*nav-bar styling*/
+nav{
+    font-size: 80%;
+    font-family: var(--mono);
+    padding: 1rem;
+}
+
+nav h1 a {
+    font-family : var(--sans);
+}
+
+nav ul h1 i{
+    justify-content: left;
+}
+
+
+nav ul{
+    list-style-type : none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+nav ul li:first-child{
+    margin-right: auto;
+}
+
+
+nav a{
+    color : var(--white);
+    text-decoration: none;
+    display : block;
+}
+
+nav a:hover{
+    color: var(--magenta);
+    text-decoration: underline;
+}
+
+.resume-button{
+    background-color : var(--magenta);
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: none;
+}
+
+.resume-button:hover{
+    cursor: pointer;
+    color: var(--white);
+    background-color: var(--hotmag);
+}
+
+/*hero landing page*/
 #intro{
     padding-bottom : 10rem;
 }
@@ -59,23 +119,21 @@ h1,h2,h3{
     font-weight: normal;
 }
 
-nav{
-    font-size: 80%;
-    font-family: var(--mono);
-    padding: 1rem;
+
+/*media icon styling*/
+section div [class*="bi-"] {
+    font-size: 150%;
+    color: var(--aqua);
 }
 
-nav h1 a {
-    font-family : var(--sans);
+/*Contact me styling*/
+#contact{
+    display : flex;
+    justify-content: center;
 }
 
-nav ul h1 i{
-    justify-content: left;
-}
-
-
-nav ul{
-    list-style-type : none;
+.contact-list{
+    list-style-type: none;
     padding: 0;
     margin: 0;
     display: flex;
@@ -83,16 +141,38 @@ nav ul{
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin: 1rem;
+}
+
+.contact-text{
+    font-size: 2rem;
+    display : flex;
+    justify-content: center;
 }
 
 
-nav a{
-    color : var(--white);
-    text-decoration: none;
-    display : block;
-}
+/*screen-reader presentation*/
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
 
-nav a:hover{
-    color: var(--magenta);
-}
 
+/*media queries*/
+@media(min-width: 850px){
+    nav{
+        margin: 0 auto;
+    }
+
+    nav li:first-child{
+        flex-basis: auto;
+        text-align: left;
+        margin-right: auto;
+    }
+}
