--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -348,6 +348,7 @@ section div [class*="bi-"] {
     color: var(--white);
     width: 25%;
     margin: auto;
+    font-size: 1.5rem;
 }
 
 .form-button:hover{
