--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,14 +57,10 @@ nav ul h1 i{
     justify-content: left;
 }
 
-
-nav ul{
+.nav-list{
     list-style-type : none;
     padding: 0;
     margin: 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
     align-items: center;
     gap: 2rem;
     margin-top: 0.5rem;
@@ -72,19 +68,17 @@ nav ul{
     margin-right: 1rem;
 }
 
-nav ul li:first-child{
-    margin-right: auto;
-    font-size: 1.25rem;
+.brand-icon{
+    font-size: 2rem;
 }
 
-
-nav a{
+.nav-link{
     color : var(--white);
     text-decoration: none;
     display : block;
 }
 
-nav a:hover{
+.nav-link:hover{
     color: var(--magenta);
     text-decoration: underline;
 }
@@ -103,11 +97,11 @@ nav a:hover{
 }
 
 
-
 /*hero landing page*/
 #intro{
+    margin: 0 auto;
     text-align: center;
-    padding-top: 11%;
+    margin-top: 15%;
     padding-bottom: 20%;
 }
 
@@ -207,10 +201,11 @@ nav a:hover{
 
 .career-icon{
     padding: 2rem;
+    border-radius: 3rem;
+    min-width: 20rem;
     width: 25rem;
     min-height: 20rem;
     max-height: 30vh;
-    border-radius: 3rem;
 }
 
 .experience-tiles{
@@ -348,14 +343,13 @@ section div [class*="bi-"] {
 .form-button{
     background-color: var(--magenta);
     border: none;
-    padding: 0.5rem;
     padding-bottom: 10px;
     padding-top: 10px;
     border-radius: 6px;
     color: var(--white);
-    width: 25%;
     margin: auto;
     font-size: 1.5rem;
+    width: 25%;
 }
 
 .form-button:hover{
@@ -378,19 +372,3 @@ section div [class*="bi-"] {
   }
 
 
-
-/*media queries*/
-/*
-@media(min-width: 850px){
-    nav{
-        margin: 0 auto;
-    }
-
-    nav li:first-child{
-        flex-basis: auto;
-        text-align: left;
-        margin-right: auto;
-    }
-}
-
-*/
