--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -381,4 +381,15 @@ section div [class*="bi-"] {
     border: 0;
   }
 
+/*footer section*/
+.spacer{
+    aspect-ratio: 960/300;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 
+.layer1 {
+    background-image: url('../assets/layered-waves-haikei.svg');
+}
