--- a/public/src/styles/style.css
+++ b/public/src/styles/style.css
@@ -3,6 +3,7 @@
     --darkblue: #1A2630;
     --aurablue: #223240;
     --plum: #4b0d49;
+    --lightplum: #e63ce0,
     --hotmag:#ff17e4;
     --magenta:#e310cb;
     --aqua:#86fbfb;
@@ -15,6 +16,10 @@
 .subheading-3{
     margin-bottom: 1rem;
     font-weight: bold;
+}
+
+.flip{
+    transform: rotate(180deg);
 }
 
 /*setting border box model*/
@@ -78,6 +83,7 @@ nav ul h1 i{
 }
 
 .nav-link:hover{
+    transition: 0.6s;
     color: var(--magenta);
     text-decoration: underline;
 }
@@ -90,30 +96,44 @@ nav ul h1 i{
 }
 
 .resume-button:hover{
+    transition: 0.6s;
     cursor: pointer;
     color: var(--white);
-    background-color: var(--hotmag);
+}
+
+.resume-button:active{
+    background-color: #ef4fdc;
+    color: var(--white);
+}
+
+/*hero landing page*/
+.blob{
+
+    max-width: 100%;
+    height: auto;
 }
 
 
-/*hero landing page*/
 #intro{
     margin: 0 auto;
     text-align: center;
-    margin-top: 15%;
-    padding-bottom: 20%;
+    margin-top: 2%;
+    margin-bottom: 12%;
+}
+
+.text-container{
+    transform: translateY(-40vw);
 }
 
 #intro p{
-    font-size: 1rem;
+    font-size: 3.25vw;
     line-height: 1.25;
-    margin-bottom: 0;
-    padding-bottom: 0;
+
 }
 
 #intro .name{
     font-family: var(--mono);
-    font-size: 3rem;
+    font-size: 3.25vw;
 }
 
 .name span{
@@ -121,12 +141,12 @@ nav ul h1 i{
     margin-top: 0;
     display: block;
     font-family: var(--sans);
-    font-size: 6rem;
+    font-size: 6vw;
     color: var(--aqua);
 }
 
 #intro h2 {
-    font-size: 4rem;
+    font-size: 3.25vw;
     font-weight: normal;
     padding-bottom: 3rem;
 }
@@ -261,7 +281,7 @@ nav ul h1 i{
 
 /*Contact me styling*/
 #contact{
-    padding-bottom: 10%;
+    padding-bottom: 2%;
 }
 
 #contact h2{
@@ -380,5 +400,19 @@ section div [class*="bi-"] {
     clip: rect(0, 0, 0, 0);
     border: 0;
   }
+/*footer section*/
+.spacer{
+    aspect-ratio: 960/300;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 
+.plum-helper{
+    background-color: #4b0d49;
+}
 
+.layer1 {
+    background-image: url('../assets/layered-waves-haikei.svg');
+}
