--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -367,6 +367,8 @@ textarea{
 }
 
 .form-button:hover{
+    transition: 0.6s;
+    text-decoration: underline;
     cursor: pointer;
     color: var(--white);
     background-color: var(--magenta);
@@ -413,8 +415,7 @@ textarea{
     color: black;
 }
 
-
-.social-icon ul li .fa:hover{
+.social-icon ul li a:hover .fa{
     color: var(--white);
 }
 
